# vsomeIP-1

./: CMakeLists.txt  README.md
config/: vsomeip.json
src/: common.hpp  dashboard_client.cpp  sensor_service.cpp
